syntax = "proto3";

package hello;

option csharp_namespace = "GRPC.Protos";

message HelloRequest {
	string nome = 1;
}

message HelloResponse {
	string msg = 1;
}

service HelloService {
	rpc Hello(HelloRequest) returns (HelloResponse) {};
}